--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "env": "^0.0.2",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
